# ES-TEAM-A

./: .gitignore  .xdp_ES.workspace.Y8CVY1  ES.workspace  PID_controller.py  README.md  acc_verdadeiro_calib.yaml  accel_final_juro.json  accel_final_juro.yaml  accelarometer.json  accelerometer.yaml  disable_motors.sh  grande calibracao_vai_joca.bag  magn_calibration_vaiJoca.yaml  magnetometer.bag  magnetometer.json  magnetometer.yaml
IMU/IMU_Blue_test/Blue_test/: Blue_test.ino
IMU/IMU_Red_test/: IMU_Red_test.ino
Motor/: MotorController.py
TempSense/: TempSweep.m
TempSense/Master/: Coms.cpp  Coms.h  Master.ino
TempSense/MasterPy/: ArduinoComs.py  SendCmd.py  TestMasterPy.py  log.txt  teste.py  teste2.py
TempSense/Monitor/: Buzzer.cpp  Buzzer.h  Energy.cpp  Energy.h  Fan.cpp  Fan.h  HeartBeat.h  HeratBeat.cpp  Monitor.ino  Morse.cpp  Morse.h  Power.cpp  Power.h  Temp.cpp  Temp.h  mean.py
TempSense/TempSense/: Temp.CPP  Temp.H  TempSense.ino
Teste LIDAR/: Teste LIDAR.ino
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/es_vision/: seg_params.h
devel/include/imu_filter_madgwick/: ImuFilterMadgwickConfig.h
devel/include/sensor_msgs_ext/: accelerometer.h  analog_voltage.h  axis_state.h  calibrate_gyroscope.h  calibrate_gyroscopeRequest.h  calibrate_gyroscopeResponse.h  covariance.h  get_proximity_configuration.h  get_proximity_configurationRequest.h  get_proximity_configurationResponse.h  gnss_fix.h  gnss_position.h  gnss_track.h  gyroscope.h  magnetometer.h  proximity.h  set_axis_home.h  set_axis_homeRequest.h  temperature.h  (+2 more)
src/alarms/: CMakeLists.txt  package.xml
src/alarms/audios/: alarm_handler.py
src/alarms/msg/: custom_sensor.msg
src/alarms/scripts/: ArduinoComs.py  alarms.py  sensor_publisher.py
src/control/: CMakeLists.txt  package.xml
src/motor_ctrl/: CMakeLists.txt  MotorController.py  PID_Lib.py  PID_controller.py  main.py  package.xml  setup.py
src/motor_ctrl/launch/: asv_pid.launch  asv_teleop.launch  goToXY.launch  ground.launch  teste.launch
src/motor_ctrl/scripts/: controller_teleop.py  controller_telop.py  followsquare.py  gotoxy.py  init_server.py  just_init.py  localization.py  pid_controller.py  set.py  set_server.py
src/motor_ctrl/src/: imu_odom.cpp  teste.cpp
src/motor_ctrl/srv/: init_motors.srv  set_motors.srv
src/ros-sensor_msgs_ext/: CMakeLists.txt  README.md  package.xml
src/ros-sensor_msgs_ext/msg/: accelerometer.msg  analog_voltage.msg  axis_state.msg  covariance.msg  gnss_fix.msg  gnss_position.msg  gnss_track.msg  gyroscope.msg  magnetometer.msg  proximity.msg  temperature.msg  time_reference.msg
src/ros-sensor_msgs_ext/srv/: calibrate_gyroscope.srv  get_proximity_configuration.srv  set_axis_home.srv
src/visao/: CMakeLists.txt  README.md
src/vision_module/: CMakeLists.txt  README.md  package.xml
tags/: README.txt  test_udp.py
tags/AutoCal/: AutoCal.ino
tags/AutoCalResp/: AutoCalResp.ino
tags/ESP32_UWB_setup_anchor/: ESP32_UWB_setup_anchor.ino
tags/ESP32_anchor_autocalibrate/: ESP32_anchor_autocalibrate.ino
tags/udp_uwb_tag/: link.cpp  link.h  udp_uwb_tag.ino
(+160 files in other folders)
