<?xml version="1.0"?>
<package format="2">
  <name>alarms</name>
  <version>1.0.0</version>
  <description>Plays sounds for alarms.</description>

  <maintainer email="pedrosr711@gmail.com">Pedro ROcha</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>



  <export>
  </export>
</package>
