<?xml version="1.0"?>
<package format="2">

  <name>sensor_msgs_ext</name>
  <version>0.1.0</version>
  <description>The sensor_msgs_ext package includes message definitions for various sensors that are not included in sensor_msgs.</description>

  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>